--- a/firstwebpage.html
+++ b/firstwebpage.html
@@ -12,7 +12,7 @@
                 <div class="logodiv"><h1>Gym<span class="orange">Fit</span></h1></div>
                     <div class="navdiv">
                         <li><a href=C:\Users\yash\front-end\css\HTML&CSS\firstwebpage.html>HOME</a></li>
-                        <li><a href=file:///C:/Users/yash/front-end/css/HTML&CSS/secondwebpage.html>PAGES.</a></li>
+                        <li><a href=secondwebpage.html>PAGES.</a></li>
                         <li><a href=C:\Users\yash\front-end\css\HTML&CSS\thirdwebpage.html>SERVICES</a></li>
                         <li><a href=C:\Users\yash\front-end\css\HTML&CSS\fourthwebpage.html >MEMBERSHIP</a></li>
                         <li><a href=C:\Users\yash\front-end\css\HTML&CSS\fifthwebpage.html >BLOG</a></li>
